# trusty-neurocoder

./: .gitignore  404.html  CLAUDE.md  LICENSE  README.md  index.html  justfile  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  test.yml
agent-workflow/: index.html
docs/: agent-workflow.md  index.md  proposal.md  todo-ecosim-integration.md  todo-ecosim-nersc.md  todo-gpu-batching.md  todo-review-2026-03-24.md
docs/issues/: cajal-soundness-and-runtime-semantics.md
docs/paper/: draft.md
docs/slides/: index.md  trusty-neurocoder-value-prop.html  trusty-neurocoder-value-prop.md
examples/: battery_degradation.py  cajal_demo.py  century_lite.py  chemical_kinetics.py  coupled_decay.py  decay_chain.py  ecosim_decomp.py  exponential_decay.py  learn_unknown_function.py
experiments/: pinn_comparison.py
issues/cajal-soundness-and-runtime-semantics/: index.html
notebooks/: 01_cajal_intro.ipynb  02_exponential_decay.ipynb  03_learn_unknown_function.ipynb  04_century_lite.ipynb  05_decay_chain.ipynb  06_battery_degradation.ipynb  07_chemical_kinetics.ipynb  08_ecosim_kernel_case_study.ipynb  09_pflotran_relative_permeability.ipynb
notebooks/01_cajal_intro/: index.html
notebooks/02_exponential_decay/: index.html
proposal/: index.html
search/: search_index.json
slides/: index.html  trusty-neurocoder-value-prop.html
tests/: test_cajal_soundness.py  test_examples_smoke.py  test_symbolic.py  test_tyreal.py
todo-ecosim-integration/: index.html
todo-ecosim-nersc/: index.html
todo-gpu-batching/: index.html
todo-review-2026-03-24/: index.html
(+16 files in other folders)
