[project]
name = "trusty-neurocoder"
version = "0.0.1"
description = "Neuro-Symbolic Agents for Verified Scientific Code Generation"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "hypothesis",
]
notebooks = [
    "jupyter",
    "nbconvert",
    "papermill",
    "matplotlib",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocs-jupyter",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
